Change to use uuids in the client and endpoint. Also update example notebook.

--- a/examples/introduction.ipynb
+++ b/examples/introduction.ipynb
@@ -2,13 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -21,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,36 +23,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "func = \"\"\"\n",
-    "def ryan_add(event):\n",
-    "    nums = event[\"data\"]\n",
-    "    sum_val = sum(nums)\n",
-    "    return sum_val\n",
+    "def test_sum_ryan3(event):\n",
+    "    print(event)\n",
+    "    return sum(event['data'])\n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'add_func'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90abe44b-ef63-4da0-b00d-d157c93e2175\n"
+     ]
     }
    ],
    "source": [
-    "fxc.register_function(\"add_func\", func, \"ryan_add\", description=\"A test function.\")"
+    "func_uuid = fxc.register_function(\"test_sum_ryan3\", func, \"test_sum_ryan3\", \n",
+    "                                  description=\"A sum function.\")\n",
+    "print(func_uuid)"
    ]
   },
   {
@@ -71,14 +62,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n"
+      "{'endpoint': 'd342ab25-42e9-4922-b831-37398f67062e', 'func': '90abe44b-ef63-4da0-b00d-d157c93e2175', 'is_async': False}\n",
+      "76\n"
      ]
     }
    ],
    "source": [
-    "payload = [1,2,3]\n",
+    "payload = [1,2,3,4,66]\n",
     "\n",
-    "res = fxc.run(payload, \"ryan-laptop\", \"add_func\")\n",
+    "endpoint_uuid = \"d342ab25-42e9-4922-b831-37398f67062e\"\n",
+    "\n",
+    "res = fxc.run(payload, endpoint_uuid, func_uuid)\n",
     "print(res)"
    ]
   },
