Updating example to use local endpoint

--- a/examples/introduction.ipynb
+++ b/examples/introduction.ipynb
@@ -36,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "90abe44b-ef63-4da0-b00d-d157c93e2175\n"
+      "0a741bca-e185-4bdc-9ddb-93ba124d9514\n"
      ]
     }
    ],
@@ -55,14 +55,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'endpoint': 'd342ab25-42e9-4922-b831-37398f67062e', 'func': '90abe44b-ef63-4da0-b00d-d157c93e2175', 'is_async': False}\n",
       "76\n"
      ]
     }
@@ -70,7 +69,7 @@
    "source": [
     "payload = [1,2,3,4,66]\n",
     "\n",
-    "endpoint_uuid = \"d342ab25-42e9-4922-b831-37398f67062e\"\n",
+    "endpoint_uuid = fxc.get_local_endpoint()\n",
     "\n",
     "res = fxc.run(payload, endpoint_uuid, func_uuid)\n",
     "print(res)"
