Updating example to reflect sdk changes.

--- a/examples/introduction.ipynb
+++ b/examples/introduction.ipynb
@@ -28,7 +28,7 @@
    "outputs": [],
    "source": [
     "func = \"\"\"\n",
-    "def test_sum_ryan3(event):\n",
+    "def test_sum(event):\n",
     "    print(event)\n",
     "    return sum(event['data'])\n",
     "\"\"\""
@@ -43,12 +43,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0a741bca-e185-4bdc-9ddb-93ba124d9514\n"
+      "ad984762-d3e8-4bd5-9ad9-84b9d99d4151\n"
      ]
     }
    ],
    "source": [
-    "func_uuid = fxc.register_function(\"test_sum_ryan3\", func, \"test_sum_ryan3\", \n",
+    "func_uuid = fxc.register_function(\"test_sum\", func, \"test_sum\", \n",
     "                                  description=\"A sum function.\")\n",
     "print(func_uuid)"
    ]
@@ -62,6 +62,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<FuncXFuture at 0x7f284cac8ac8 state=running>\n",
       "76\n"
      ]
     }
@@ -71,8 +72,9 @@
     "\n",
     "endpoint_uuid = fxc.get_local_endpoint()\n",
     "\n",
-    "res = fxc.run(payload, endpoint_uuid, func_uuid)\n",
-    "print(res)"
+    "res = fxc.run(payload, endpoint_uuid, func_uuid, asynchronous=True, async_poll=1)\n",
+    "print(res)\n",
+    "print(res.result())"
    ]
   },
   {
