--- a/examples/introduction.ipynb
+++ b/examples/introduction.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Introduction to funcX\n",
+    "\n",
+    "funcX is a Function-as-a-Service (FaaS) platform for science that enables you to convert almost any resource into a high-performance function serving device. Deploying a funcX endpoint will integrate your resource into the function serving fabric, allowing you to dynamically send, monitor, and receive results from function invocations. funcX is underpinned by Parsl, allowing you to connect your endpoint to large compute resources via traditional batch queues, where funcX will dynamically provision, use, and release resources on-demand to fulfill function requests.\n",
+    "\n",
+    "Here we provide an example of using funcX to register a function and run it on a publicly available tutorial endpoint."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We start by creating a funcX client to interact with the service."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -22,16 +40,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we define the tutorial endpoint to be used in this demonstration. Because the tutorial endpoint is Kubernetes-based, we select a simple python3.6 container that will be used during execution."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "func = \"\"\"\n",
-    "def test_sum(event):\n",
-    "    print(event)\n",
-    "    return sum(event['data'])\n",
-    "\"\"\""
+    "endpoint_uuid = 'a92945a1-2778-4417-8cd1-4957bc35ce66' \n",
+    "container_uuid = '3861862b-152e-49a4-b15e-9a5da4205cad'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we define a little hello-world function and register it with the service."
    ]
   },
   {
@@ -40,17 +69,39 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ad984762-d3e8-4bd5-9ad9-84b9d99d4151\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'6084e6ba-9309-4914-b1d1-d29b455d388a'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "func_uuid = fxc.register_function(\"test_sum\", func, \"test_sum\", \n",
-    "                                  description=\"A sum function.\")\n",
-    "print(func_uuid)"
+    "func = \"\"\"\n",
+    "def hello_world(event):\n",
+    "    data = event['data']\n",
+    "    if len(data) > 0:\n",
+    "        return f\"Hello, {data}!\"\n",
+    "    return \"Hello, world!\"\n",
+    "\"\"\"\n",
+    "\n",
+    "# Register the function\n",
+    "func_uuid = fxc.register_function(\"hello_world\", func, \"hello_world\", \n",
+    "                                  description=\"A test function.\",\n",
+    "                                  container=container_uuid)\n",
+    "func_uuid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can define an input to the function and run it.\n",
+    "\n",
+    "Setting asynchronous to True means the call will be non-blocking and will return a future that can be used to check the status of the execution and retrieve the result."
    ]
   },
   {
@@ -59,22 +110,76 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<FuncXFuture at 0x7f284cac8ac8 state=running>\n",
-      "76\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<FuncXFuture at 0x7f6218ec99e8 state=running>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "payload = [1,2,3,4,66]\n",
-    "\n",
-    "endpoint_uuid = fxc.get_local_endpoint()\n",
-    "\n",
-    "res = fxc.run(payload, endpoint_uuid, func_uuid, asynchronous=True, async_poll=1)\n",
-    "print(res)\n",
-    "print(res.result())"
+    "payload = \"\"\n",
+    "res = fxc.run(payload, endpoint_uuid, func_uuid, asynchronous=True, async_poll=5)\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Retrieve the result. Note, it may take a minute for the tutorial endpoint to spin up a resource to run your function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello, world!'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.result()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Try it with some other input!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello, Ryan!'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "payload = \"Ryan\"\n",
+    "res = fxc.run(payload, endpoint_uuid, func_uuid, asynchronous=True, async_poll=5)\n",
+    "res.result()"
    ]
   },
   {
