Updating Introduction notebook to match current interface

--- a/examples/introduction.ipynb
+++ b/examples/introduction.ipynb
@@ -2,76 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "import sys\n",
+    "from funcx.sdk.client import FuncXClient\n",
     "\n",
-    "from funcx.sdk.client import FuncXClient"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "fxc = FuncXClient()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "func = \"\"\"\n",
-    "def test_sum_ryan3(event):\n",
-    "    print(event)\n",
-    "    return sum(event['data'])\n",
-    "\"\"\""
+    "def funcx_sum(items):\n",
+    "    return sum(items)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0a741bca-e185-4bdc-9ddb-93ba124d9514\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "func_uuid = fxc.register_function(\"test_sum_ryan3\", func, \"test_sum_ryan3\", \n",
-    "                                  description=\"A sum function.\")\n",
+    "func_uuid = fxc.register_function(funcx_sum,\n",
+    "                                  description=\"A sum function\")\n",
     "print(func_uuid)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "76\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "payload = [1,2,3,4,66]\n",
     "\n",
-    "endpoint_uuid = fxc.get_local_endpoint()\n",
+    "endpoint_uuid = 'c034b27f-06da-4bec-8f2c-e8a5ab09511c'\n",
     "\n",
-    "res = fxc.run(payload, endpoint_uuid, func_uuid)\n",
+    "res = fxc.run(payload, endpoint_id=endpoint_uuid, function_id=func_uuid)\n",
     "print(res)"
    ]
   },
@@ -80,14 +53,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(res.done)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (funcx)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "funcx"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -99,7 +74,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
