--- a/examples/Tutorial.ipynb
+++ b/examples/Tutorial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction to funcX\n",
+    "# funcX Tutorial\n",
     "\n",
     "funcX is a Function-as-a-Service (FaaS) platform for science that enables you to convert almost any resource into a high-performance function serving device. Deploying a funcX endpoint will integrate your resource into the function serving fabric, allowing you to dynamically send, monitor, and receive results from function invocations. funcX is underpinned by Parsl, allowing you to connect your endpoint to large compute resources via traditional batch queues, where funcX will dynamically provision, use, and release resources on-demand to fulfill function requests.\n",
     "\n",
@@ -78,9 +78,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(res.done)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
