--- a/examples/Tutorial.ipynb
+++ b/examples/Tutorial.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# funcX Tutorial\n",
     "\n",
-    "funcX is a Function-as-a-Service (FaaS) platform for science that enables you to convert almost any resource into a high-performance function serving device. Deploying a funcX endpoint will integrate your resource into the function serving fabric, allowing you to dynamically send, monitor, and receive results from function invocations. funcX is underpinned by Parsl, allowing you to connect your endpoint to large compute resources via traditional batch queues, where funcX will dynamically provision, use, and release resources on-demand to fulfill function requests.\n",
+    "funcX is a Function-as-a-Service (FaaS) platform for science that enables you to convert almost any computing resource into a high-performance function serving device. Deploying a funcX endpoint will integrate your resource into the function serving fabric, allowing you to dynamically send, monitor, and receive results from function invocations. funcX is built on top of Parsl, allowing you to connect your endpoint to large compute resources via traditional batch queues, where funcX will dynamically provision, use, and release resources on-demand to fulfill function requests.\n",
     "\n",
     "Here we provide an example of using funcX to register a function and run it on a publicly available tutorial endpoint."
    ]
@@ -65,27 +65,20 @@
    },
    "outputs": [],
    "source": [
-    "payload = [1,2,3,4,66]\n",
+    "payload = [1, 2, 3, 4, 66]\n",
     "\n",
     "endpoint_uuid = 'c034b27f-06da-4bec-8f2c-e8a5ab09511c'\n",
     "\n",
     "res = fxc.run(payload, endpoint_id=endpoint_uuid, function_id=func_uuid)\n",
     "print(res)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (funcX)",
    "language": "python",
-   "name": "python3"
+   "name": "myenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -97,7 +90,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
