Adding tutorial endpoint to example notebook.

--- a/examples/Tutorial.ipynb
+++ b/examples/Tutorial.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,9 +48,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4cb9a107-7ad9-41ca-bfb8-2b91b9c2983e\n"
+     ]
+    }
+   ],
    "source": [
     "func_uuid = fxc.register_function(funcx_sum,\n",
     "                                  description=\"A sum function\")\n",
@@ -59,26 +67,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "949b10ba-85ce-4203-a270-0a42ed3edfec\n"
+     ]
+    }
+   ],
    "source": [
     "payload = [1, 2, 3, 4, 66]\n",
     "\n",
-    "endpoint_uuid = 'c034b27f-06da-4bec-8f2c-e8a5ab09511c'\n",
+    "endpoint_uuid = '840b214f-ea5c-4d0c-b2b8-ea591634065b'\n",
     "\n",
     "res = fxc.run(payload, endpoint_id=endpoint_uuid, function_id=func_uuid)\n",
     "print(res)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "76"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fxc.get_result(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (funcX)",
+   "display_name": "Python (funcx)",
    "language": "python",
-   "name": "myenv"
+   "name": "funcx"
   },
   "language_info": {
    "codemirror_mode": {
@@ -90,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
