Updating tutorial endpoint address.

--- a/examples/Tutorial.ipynb
+++ b/examples/Tutorial.ipynb
@@ -55,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cca3c1a0-6438-457e-9798-7bce020d8d8f\n"
+      "b3ecbdaf-d9f7-4471-bdd5-0fe2685af379\n"
      ]
     }
    ],
@@ -76,14 +76,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "77692c10-ba2d-4eba-9e32-df0fd872684e\n"
+      "a12157c5-9f8f-4bea-966a-a7b04bc4f660\n"
      ]
     }
    ],
    "source": [
     "payload = [1, 2, 3, 4, 66]\n",
     "\n",
-    "endpoint_uuid = '731d4837-acd7-4b51-8f53-325dbd43dade'\n",
+    "endpoint_uuid = '3853a3bb-a847-41f8-bab4-e22e8b74ee02' # Public tutorial endpoint\n",
     "\n",
     "res = fxc.run(payload, endpoint_id=endpoint_uuid, function_id=func_uuid)\n",
     "print(res)"
