Updating tutorial endpoint id.

--- a/examples/Tutorial.ipynb
+++ b/examples/Tutorial.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,14 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "e4452b8d-2f59-48f7-82fd-d1448b9b06e3\n"
+      "516347eb-b211-4dd7-b4dc-c656b677a20b\n"
      ]
     }
    ],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {
     "scrolled": true
    },
@@ -76,7 +76,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4e775b2a-3fd8-463a-a99d-ff759c6817b1\n"
+      "d57e9d05-70a4-4da0-97c6-3f974bd24bb9\n"
      ]
     }
    ],
@@ -84,23 +84,98 @@
     "payload = [1, 2, 3, 4, 66]\n",
     "\n",
     "endpoint_uuid = '0b91e043-b323-438f-95ef-83ee511fde1b' # Public tutorial endpoint\n",
-    "\n",
+    "endpoint_uuid = '6c4323f4-a062-4551-a883-146a352a43f5' # theta local\n",
+    "endpoint_uuid = 'd0e78228-c68b-4e62-b48e-6b24bb0e981b'\n",
     "res = fxc.run(payload, endpoint_id=endpoint_uuid, function_id=func_uuid)\n",
     "print(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Exception",
+     "evalue": "Task pending",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-37-a2cd871b617a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfxc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_result\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mres\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/.miniconda3/envs/funcx/lib/python3.6/site-packages/funcx/sdk/client.py\u001b[0m in \u001b[0;36mget_result\u001b[0;34m(self, task_id)\u001b[0m\n\u001b[1;32m    138\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    139\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 140\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Task pending\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    141\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    142\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mException\u001b[0m: Task pending"
+     ]
+    }
+   ],
+   "source": [
+    "fxc.get_result(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def funcx2(items):\n",
+    "    import os\n",
+    "    import json\n",
+    "    import shutil\n",
+    "    import subprocess\n",
+    "    from subprocess import PIPE\n",
+    "\n",
+    "    os.chdir('/home/rchard/APSDataAnalysis/ryan/Crystallography/processing/A')\n",
+    "    cmd = f\"source ~/Crystallography/dials-dev20181129/dials_env.sh; dials.stills_process Atmosphere_8_0000* > log-test.txt\"\n",
+    "\n",
+    "    res = subprocess.run(cmd, stdout=PIPE, stderr=PIPE, \n",
+    "                         shell=True, executable='/bin/bash')\n",
+    "    \n",
+    "    print(res.stdout)\n",
+    "    print(res.stderr)\n",
+    "    return str(res.stdout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f5bbb4c2-31ea-4c1b-9b63-9ae75ed432b2\n"
+     ]
+    }
+   ],
+   "source": [
+    "func_uuid = fxc.register_function(funcx2,\n",
+    "                                  description=\"SSX at theta\")\n",
+    "print(func_uuid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = fxc.run(payload, endpoint_id=endpoint_uuid, function_id=func_uuid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "76"
+       "\"b''\""
       ]
      },
-     "execution_count": 5,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
