--- a/examples/Tutorial.ipynb
+++ b/examples/Tutorial.ipynb
@@ -38,7 +38,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "82c5ab6c-81c7-4f54-8403-86d229f708b3\n"
+     ]
+    }
+   ],
+   "source": [
+    "ecr_uri = '576668000072.dkr.ecr.us-east-1.amazonaws.com/xtract-keyword:latest'\n",
+    "cont_description = 'Extracts metadata from free text files (txt, pdf, etc.)'\n",
+    "container_uuid = fxc.register_ecr_container('xtract-keyword', ecr_uri, cont_description)\n",
+    "print(container_uuid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,17 +68,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "e4452b8d-2f59-48f7-82fd-d1448b9b06e3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "func_uuid = fxc.register_function(funcx_sum,\n",
     "                                  description=\"A sum function\")\n",
@@ -67,23 +79,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4e775b2a-3fd8-463a-a99d-ff759c6817b1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "payload = [1, 2, 3, 4, 66]\n",
     "\n",
-    "endpoint_uuid = '0b91e043-b323-438f-95ef-83ee511fde1b' # Public tutorial endpoint\n",
+    "endpoint_uuid = '9f68f6b0-7031-45cf-bc16-d4220a0feb8e' # Public tutorial endpoint\n",
     "\n",
     "res = fxc.run(payload, endpoint_id=endpoint_uuid, function_id=func_uuid)\n",
     "print(res)"
@@ -91,20 +95,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "76"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fxc.get_result(res)"
    ]
@@ -119,9 +112,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (funcx)",
+   "display_name": "Python (fx1)",
    "language": "python",
-   "name": "funcx"
+   "name": "fx1"
   },
   "language_info": {
    "codemirror_mode": {
@@ -133,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
