--- a/examples/Tutorial-River-Endpoint.ipynb
+++ b/examples/Tutorial-River-Endpoint.ipynb
@@ -169,6 +169,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It may take sometime to get the result at the first time, since the endpoint needs to start a pod to run the function for the "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
