Updating River example.

--- a/examples/Tutorial-River-Endpoint.ipynb
+++ b/examples/Tutorial-River-Endpoint.ipynb
@@ -33,12 +33,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we define the tutorial endpoint to be used in this demonstration. Because the tutorial endpoint is Kubernetes-based, we select a simple python3.6 container that will be used during execution."
+    "### Registering a function\n",
+    "\n",
+    "Here we define an example function to be used. This function will report the name of the machine it is executed on. funcX functions can be applied to almost any endpoint the user is permitted to use, so we can reuse this function across endpoints."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,26 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Register a function <b>WITHOUT</b> a container and run the function using the public tutorial endpoint"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1ff4cbcb-4754-40ac-97c6-48fcd127971a\n"
-     ]
-    }
-   ],
-   "source": [
-    "func_uuid1 = fxc.register_function(platform,\n",
-    "                                   description=\"A function to list platform info\")\n",
-    "print(func_uuid1)"
+    "We first register the function <b>WITHOUT</b> a container. This means the function will be executed with either the default python environment the worker is deployed in, or, in the case of a Kubernetes endpoint, the default container used by the endpoint."
    ]
   },
   {
@@ -82,12 +65,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "533fb077-f670-4a19-941e-9a8dc46dce30\n"
+      "62966e2c-7b84-416e-ad37-ac1341a14cae\n"
      ]
     }
    ],
    "source": [
-    "payload = [1, 2, 3, 4, 66]\n",
+    "func_uuid1 = fxc.register_function(platform,\n",
+    "                                   description=\"A function to list platform info\")\n",
+    "print(func_uuid1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that the function has been registered with the funcX service we can invoke it.\n",
+    "\n",
+    "This code specifies the public funcX tutorial endpoint. Any user is permitted to use this endpoint. The function returns a task_id that can subsequently be used to retrieve the result of its execution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a5389269-a992-4563-8800-a6141378d1ee\n"
+     ]
+    }
+   ],
+   "source": [
+    "payload = []\n",
     "\n",
     "endpoint_uuid = '4b116d3c-1703-4f8f-9f6f-39921e5864df' # Public tutorial endpoint\n",
     "\n",
@@ -97,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +117,7 @@
        "uname_result(system='Linux', node='ip-10-0-1-192.ec2.internal', release='4.14.152-127.182.amzn2.x86_64', version='#1 SMP Thu Nov 14 17:32:43 UTC 2019', machine='x86_64', processor='')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,21 +130,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Now register a function <b>WITH</b> a container (Docker). Then we can run this function on a River endpoint.\n",
+    "Note that the function's result shows that the function was executed on an Amazon EC2 machine. \n",
     "\n",
-    "#### To run on River, you will need to be added to a globus group. Please send Zhuozhao (zhuozhao@uchicago.edu) an email."
+    "### Running on River\n",
+    "\n",
+    "Now we can try running the function on the River K8s cluster. To do this we simply change the endpoint_uuid and the function will be performed using the default container."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### IMPORTANT: The River endpoint is restricted to members of a Globus Auth Group.  To join this group please email Zhuozhao (zhuozhao@uchicago.edu)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "d65b143b-c1c0-4443-9fea-679bbf6cb734\n"
+      "22fc8c75-b624-46e5-a78c-339a6c6136b0\n"
+     ]
+    }
+   ],
+   "source": [
+    "river_ep_uuid = '2c92a06a-015d-4bfa-924c-b3d0c36bdad7' # River endpoint\n",
+    "\n",
+    "res2 = fxc.run(payload, endpoint_id=river_ep_uuid, function_id=func_uuid1)\n",
+    "print(res2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "uname_result(system='Linux', node='funcx-river-1581556517816', release='5.3.2-1.el7.elrepo.x86_64', version='#1 SMP Tue Oct 1 08:18:21 EDT 2019', machine='x86_64', processor='')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fxc.get_result(res2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that the result now shows the function was executed on River."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Registering a function WITH a contontainer.\n",
+    "\n",
+    "When registering a function you can associate a specific container with it. If a container is specified, the container will be staged to the endpoint and used to run the function. Here we show how a container is included in the function registration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6f72610f-238d-4223-8953-4b7a9d3f7d20\n"
      ]
     }
    ],
@@ -146,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -155,7 +231,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6e682672-8ad0-4ff8-8369-a34b292b75a7\n"
+      "e7a9772f-0f10-4117-826a-bb43d7bf9aad\n"
      ]
     }
    ],
@@ -164,8 +240,8 @@
     "\n",
     "endpoint_uuid = \"2c92a06a-015d-4bfa-924c-b3d0c36bdad7\" # River endpoint\n",
     "\n",
-    "res2 = fxc.run(payload, endpoint_id=endpoint_uuid, function_id=func_uuid2)\n",
-    "print(res2)"
+    "res3 = fxc.run(payload, endpoint_id=river_ep_uuid, function_id=func_uuid2)\n",
+    "print(res3)"
    ]
   },
   {
@@ -177,22 +253,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "uname_result(system='Linux', node='funcx-river-1581550383901', release='5.3.2-1.el7.elrepo.x86_64', version='#1 SMP Tue Oct 1 08:18:21 EDT 2019', machine='x86_64', processor='')"
+       "uname_result(system='Linux', node='funcx-river-1581556699844', release='5.3.2-1.el7.elrepo.x86_64', version='#1 SMP Tue Oct 1 08:18:21 EDT 2019', machine='x86_64', processor='')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fxc.get_result(res2)"
+    "fxc.get_result(res3)"
    ]
   },
   {
@@ -219,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
