Update tutorial notebook.

--- a/examples/Tutorial.ipynb
+++ b/examples/Tutorial.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# funcX Tutorial\n",
     "\n",
-    "funcX is a Function-as-a-Service (FaaS) platform for science that enables you to convert almost any computing resource into a high-performance function serving device. Deploying a funcX endpoint will integrate your resource into the function serving fabric, allowing you to dynamically send, monitor, and receive results from function invocations. funcX is built on top of Parsl, allowing you to connect your endpoint to large compute resources via traditional batch queues, where funcX will dynamically provision, use, and release resources on-demand to fulfill function requests.\n",
+    "funcX is a Function-as-a-Service (FaaS) platform for science that enables you to convert almost any computing resource into a high-performance function serving device. Deploying a funcX endpoint agent will integrate your resource into the function serving fabric, allowing you to dynamically send, monitor, and receive results from function invocations. funcX is built on top of [Parsl](https://parsl-project.org), allowing you to connect your endpoint to large compute resources via traditional batch queues, where funcX will dynamically provision, use, and release resources on-demand to fulfill function requests.\n",
     "\n",
     "Here we provide an example of using funcX to register a function and run it on a publicly available tutorial endpoint."
    ]
@@ -15,7 +15,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We start by creating a funcX client to interact with the service."
+    "## funcX Client\n",
+    "\n",
+    "We start by creating a funcX client to interact with the service. The client is a programmatic means of communicating with the funcX service and allows you to:\n",
+    "- Register functions\n",
+    "- Register containers and execution environments\n",
+    "- Launch registered function against endpoints\n",
+    "- Check the status of launched functions and\n",
+    "- Retrieve outputs from functions\n",
+    "\n",
+    "#### Authentication\n",
+    "\n",
+    "Creating a client will force an authentication flow where you will be asked to authenticate with Globus Auth. Every interaction with funcX is authenticated to allow us to enforce access control on both functions and endpoints. As part of the authentication process we request access to your identity information (to retrieve your email address) and Globus Groups management access. We require Groups access in order to facilitate sharing."
    ]
   },
   {
@@ -33,7 +44,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we define the tutorial endpoint to be used in this demonstration. Because the tutorial endpoint is Kubernetes-based, we select a simple python3.6 container that will be used during execution."
+    "Here we define a Python function to register with funcX. This function simply sums the input passed to the function.\n",
+    "\n",
+    "When defining a function you can specify \\*args and \\*\\*kwargs as inputs. \n",
+    "\n",
+    "##### Note: any dependencies for the function must be specified inside the function body."
    ]
   },
   {
@@ -47,6 +62,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Registering a function\n",
+    "\n",
+    "To use a function with funcX you must first register it with the service. Using `register_function`, you can specify a function to register. You can also optionally include a description of the function.\n",
+    "\n",
+    "The registration process will serialize the function body and transmit it to the funcX Web Service.\n",
+    "\n",
+    "Registering a function results in a UUID that can be used to invoke the function."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -55,14 +83,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ce23d1c0-91f1-49df-a30b-0672453d8f9b\n"
+      "9975a590-e3a9-4277-941a-e8bd6482be90\n"
      ]
     }
    ],
    "source": [
     "func_uuid = fxc.register_function(funcx_sum,\n",
-    "                                  description=\"A sum function\")\n",
+    "                                  description=\"A sleep function\")\n",
     "print(func_uuid)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Running a function\n",
+    "\n",
+    "To invoke a function you must specify the `function_id`, returned from the registration process, and an `endpoint_id`, to perform the function. Note: here we use the funcX public tutorial endpoint.\n",
+    "\n",
+    "The client's `run` function will serialize any \\*args and \\*\\*kwargs, and pass them to the function when invoking it. Therefore, as our example function simply takes an arg input (items) we can specify an input arg and it will be used by the function. Here we define a small list of integers for our function to sum.\n",
+    "\n",
+    "The Web service will return the UUID for the executing task. This UUID can be used to check the status of the request and retrieve the result."
    ]
   },
   {
@@ -76,17 +117,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7508c2e7-3026-4ee3-95b3-25f7a605d893\n"
+      "283020f3-2761-4816-8357-729471cda00e\n"
      ]
     }
    ],
    "source": [
-    "payload = [1, 2, 3, 4, 66]\n",
-    "\n",
     "endpoint_uuid = '4b116d3c-1703-4f8f-9f6f-39921e5864df' # Public tutorial endpoint\n",
+    "\n",
+    "payload = [1, 2, 3, 4, 5]\n",
     "\n",
     "res = fxc.run(payload, endpoint_id=endpoint_uuid, function_id=func_uuid)\n",
     "print(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can now retrieve the result of the invocation using `get_result()`. \n",
+    "\n",
+    "##### Note: We remove the task from our database once the result has been retrieved, thus you can only retireve the result once."
    ]
   },
   {
@@ -97,7 +147,7 @@
     {
      "data": {
       "text/plain": [
-       "76"
+       "15"
       ]
      },
      "execution_count": 5,
